welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:22: error: Unmatched closing brace '}' ignored here
}
^PictureMono2:25: error: eof expected but '}' found.
}
^